RESOLVED FIXED155407
ComposedTreeIterator fails to traverse slots if root is shadow host
https://bugs.webkit.org/show_bug.cgi?id=155407
Summary ComposedTreeIterator fails to traverse slots if root is shadow host
Antti Koivisto
Reported 2016-03-13 05:33:17 PDT
Bad traversal
Attachments
patch (6.50 KB, patch)
2016-03-13 05:45 PDT, Antti Koivisto
darin: review+
Antti Koivisto
Comment 1 2016-03-13 05:45:18 PDT
Antti Koivisto
Comment 2 2016-03-13 15:54:17 PDT
Note You need to log in before you can comment on or make changes to this bug.